--- a/src/app.css
+++ b/src/app.css
@@ -25,6 +25,7 @@ body {
   font-family: var(--font);
   background-color: var(--general-background-color);
   color: var(--color-primary);
+  overflow: auto;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
