--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-/* html, body, div, span, applet, object, iframe,
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -15,11 +15,11 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: "Lexend", serif;
   font-optical-sizing: auto;
   font-style: normal;
   vertical-align: baseline;
-} */
+}
+
 body {
   margin: 0;
   font-family: var(--font);
